--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
+    "config": "^3.3.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "morgan": "^1.9.1"
