--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "config": "^3.3.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
