separate api request from routes

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "^6.12"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development supervisor index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
     "start": "node index.js"
   },
   "keywords": [],
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
+    "nodemon": "^1.9.2",
     "supervisor": "^0.12.0"
   }
 }
