--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "^6.12"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js --ignore 'storage/",
     "start": "node index.js"
   },
   "keywords": [],
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
-    "nodemon": "^1.9.2",
+    "nodemon": "^2.0.2",
     "supervisor": "^0.12.0"
   }
 }
