--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "config": "^3.3.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "rimraf": "^3.0.2"
   },
