--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6"
   },
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
