--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "npm": "^6.12"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon index.js --ignore 'storage/",
-    "start": "node index.js"
+    "server": "cross-env NODE_ENV=development nodemon index.js --ignore storage/",
+    "start": "node index.js",
+    "client": "npm run start --prefix client",
+    "dev": "run-p server client"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +28,7 @@
   "devDependencies": {
     "cross-env": "^7.0.2",
     "nodemon": "^2.0.2",
+    "npm-run-all": "^4.1.5",
     "supervisor": "^0.12.0"
   }
 }
