--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "npm": "^6.12"
   },
   "scripts": {
-    "server": "cross-env NODE_ENV=development nodemon index.js --ignore storage/",
+    "server": "cross-env NODE_ENV=development nodemon index.js",
     "start": "node index.js",
     "client": "npm run start --prefix client",
     "dev": "run-p server client"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "storage/*",
+      "client/*"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -23,6 +29,7 @@
     "express-async-errors": "^3.1.1",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
+    "redux-saga": "^1.1.3",
     "rimraf": "^3.0.2"
   },
   "devDependencies": {
