--- a/package.json
+++ b/package.json
@@ -15,21 +15,41 @@
   },
   "nodemonConfig": {
     "ignore": [
-      "storage/*",
-      "client/*"
+      "storage/*"
     ]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/register": "^7.9.0",
+    "ansi-to-html": "^0.6.14",
     "axios": "^0.19.2",
+    "babel-plugin-dynamic-import-node": "^2.3.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "config": "^3.3.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "file-loader": "^6.0.0",
+    "ignore-styles": "^5.0.1",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
-    "rimraf": "^3.0.2"
+    "node-sass": "^4.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
+    "regenerator-runtime": "^0.13.5",
+    "reselect": "^4.0.0",
+    "rimraf": "^3.0.2",
+    "url-loader": "^4.0.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
