--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
+    "hermione": "^3.1.0",
     "jest": "^25.3.0",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
