--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "cross-env": "^7.0.2",
     "hermione": "^3.1.0",
+    "html-reporter": "^5.15.2",
     "jest": "^25.3.0",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
