--- a/build-server/package.json
+++ b/build-server/package.json
@@ -12,8 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
-    "config": "^3.3.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
