--- a/build-agent/package.json
+++ b/build-agent/package.json
@@ -7,6 +7,11 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
+  "nodemonConfig": {
+    "ignore": [
+      "storage/*"
+    ]
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
