--- a/agent/package.json
+++ b/agent/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "axios-retry": "^3.1.4",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "rimraf": "^3.0.2"
