--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/register": "^7.9.0",
     "ansi-to-html": "^0.6.14",
     "axios": "^0.19.2",
+    "axios-retry": "^3.1.4",
     "babel-plugin-dynamic-import-node": "^2.3.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "config": "^3.3.1",
