--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "axios-retry": "^3.1.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "morgan": "^1.10.0"
