--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "^6.12"
   },
   "scripts": {
-    "server": "cross-env NODE_ENV=development nodemon index.js",
+    "server": "cross-env NODE_ENV=development TS_NODE_FILES=1 nodemon ./index.ts -r ts-node/register",
     "start": "node index.js",
     "client": "npm run start --prefix client",
     "dev": "run-p server client",
@@ -64,6 +64,8 @@
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
     "supertest": "^4.0.2",
-    "supervisor": "^0.12.0"
+    "supervisor": "^0.12.0",
+    "ts-node": "^8.9.0",
+    "typescript": "^3.8.3"
   }
 }
