--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@bem-react/classname": "^1.5.8",
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "@babel/register": "^7.9.0",
+    "@bem-react/classname": "^1.5.8",
     "ansi-to-html": "^0.6.14",
     "axios": "^0.19.2",
     "axios-retry": "^3.1.4",
@@ -57,6 +57,12 @@
     "url-loader": "^4.1.0"
   },
   "devDependencies": {
+    "@types/babel-core": "^6.25.6",
+    "@types/babel-types": "^7.0.7",
+    "@types/config": "0.0.36",
+    "@types/express": "^4.17.6",
+    "@types/morgan": "^1.9.0",
+    "@types/node": "^13.13.2",
     "cross-env": "^7.0.2",
     "hermione": "^3.1.0",
     "html-reporter": "^5.15.2",
