--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.7",
-    "@types/react-router-dom": "^5.1.4"
+    "@types/react-router-dom": "^5.1.4",
+    "@types/redux-logger": "^3.0.7"
   }
 }
